# ADS1299-x-MicroPython-Module

./: .gitignore  Makefile  README.md  makefile  plot.py  pyproject.toml
app/: ads1299.py  main.py
module/: ads1299.py
src/: main.py  ring_buffer.py  wlan.py
src/module/: ads1299.py
src/monitor/: dashboard.py
tests/: 1_shot_test.py  1_slave_test.py  2_slaves_test.py  blink.py  internal_signals.py  plot.py  plot_channels.py  signals.json  view_networks.py
